# mentions_ktest

./: .gitignore  README_nba_link_scout.md  RUNBOOK.md  agents.md  agents_template.md  audioDL.py  basketball_glossary.md  documentation_rules.md  extract_video_url_api.py  extract_video_url_selenium.py  pyproject.toml  requirements.txt
configs/: nba_link_scout.basketball_video.template.json  nba_link_scout.example.json  transcript_terms.example.json
docs/: repo_context_llm.md  repo_intuition_essay.md  repo_technical_reference.md
powerbi/: README.md  mentions_measures.dax  mentions_queries.m  mentions_reporting_views.sql
scripts/: apply_mentions_reporting_views.py  run_nba_link_range.ps1
tasks/: lessons.md  test_idempotent.sqlite  test_idempotent_037bc48410b14c8dad6b1e9b30a8db85.sqlite  test_idempotent_09787c80d70d4ecea4904a6cef6285d4.sqlite  test_idempotent_0b13e4d49d664931980e98b3a855d8cf.sqlite  test_idempotent_0e2b9f4f41ea4dc9be73072895d6520a.sqlite  test_idempotent_129703f2af1646be8ca4e8eb1ddc6aa6.sqlite  test_idempotent_18393aa4e7874dae83c3d6335516c7a1.sqlite  test_idempotent_1ca63ed4a48e4a799f41c59d582e6dc1.sqlite  test_idempotent_1ff86fde047e47b9a0794728f8b60cd9.sqlite  test_idempotent_2931a4db0a5a46a484b0b463a783a78b.sqlite  test_idempotent_2b854404f1d942d9a9c4835b169a4051.sqlite  test_idempotent_522f9aa710ee41b8a84ce853ec6cc439.sqlite  test_idempotent_78adc1e2dfc64e10bd19fc7eee9fc5c6.sqlite  test_idempotent_7f2ba95f30a246658f45cededdfe5362.sqlite  test_idempotent_83072f564ff0403ab580a63a30f54103.sqlite  todo.md  (+12 more)
tests/: test_mentions_term_sync.py  (+21 more)
(+43 files in other folders)
