[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentions-sports-poller"
version = "0.1.0"
description = "Kalshi Mentions Sports orderbook polling and VWAP pipeline"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
mentions-sports-poller = "mentions_sports_poller.main:main"
nba-link-scout = "mentions_sports_poller.nba_link_scout.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
