[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentions-sports-poller"
version = "0.1.0"
description = "Kalshi Mentions Sports orderbook polling and VWAP pipeline"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "selenium>=4.18.0",
  "playwright>=1.50.0",
  "yt-dlp>=2025.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
mentions-sports-poller = "mentions_sports_poller.mentions_api.main:main"
nba-link-scout = "mentions_sports_poller.nba_link_scout.cli:main"
nba-audio-dl = "mentions_sports_poller.nba_link_scout.audio_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
